Grouped files to platform-core